# tps

./: Dockerfile  README.md  docker-compose.yml  how_to_run.txt  pyproject.toml  req.txt
interview_task/: db.sqlite3
interview_task/interview_task/: asgi.py  settings.py  urls.py  wsgi.py
interview_task/pinger/: admin.py  exceptions.py  models.py  serializers.py  urls.py  views.py
interview_task/pinger/migrations/: 0001_initial.py  0002_alter_ipaddress_ip.py
interview_task/pinger/test/: test_views.py
